--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
     defer-datasource-initialization: true
     hibernate:
       ddl-auto: create
+    show-sql: true
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
